fix slider name on mobile

--- a/public/css/frontend/main.css
+++ b/public/css/frontend/main.css
@@ -276,7 +276,6 @@ body{width:100%;margin:0 auto;background-color:#ffffff;color:#6d6e71;font-family
 .owl-next{right:0;}
 .section-slider{padding-top:40px;text-align:center;}
 .slide_description-wrap{padding-left:0;padding-right:0;}
-.slide-name{font-size:4.0625em;line-height:40px;}
 .slide_main-description{padding:0 30px;font-size:1.3125em;}
 .slide_description{padding:0 30px;font-size:0.875em;}
 .soc{margin-bottom:25px;}
@@ -307,7 +306,7 @@ body{width:100%;margin:0 auto;background-color:#ffffff;color:#6d6e71;font-family
 .map.active .arrow-bottom{left:47.5%;}
 .mail.active .arrow-bottom{left:78%;}
 .section-slider{padding:20px 10px;}
-.slide-name{font-size:50px;padding-bottom:20px;}
+.slide-name{font-size:32px;padding-bottom:20px;line-height: 32px;}
 .slide_main-description{margin-bottom:20px;padding:0;font-size:16px;line-height:20px;}
 .slide_description{margin-bottom:30px;padding:0;font-size:14px;line-height:19px;}
 .order{margin-bottom:10px;}
